include/bcsv/bcsv_c_api.h

// ============================================================================
// Opaque handles
// ============================================================================
typedef void* bcsv_reader_t;
typedef void* bcsv_row_t;
typedef void* bcsv_layout_t;
typedef void* bcsv_csv_reader_t;
typedef void* bcsv_csv_writer_t;
typedef void* bcsv_sampler_t;
typedef const void* const_bcsv_row_t;
typedef const void* const_bcsv_layout_t;
typedef const void* const_bcsv_csv_reader_t;
typedef const void* const_bcsv_csv_writer_t;
// ============================================================================
// Visitor callback type
// ============================================================================
// Called once per column during bcsv_row_visit_const.
// col_index: column index (0-based)
// col_type:  bcsv_type_t of this column
// value:     pointer to the column value (bool*, uint8_t*, ..., const char* for STRING)
// user_data: opaque pointer passed through from bcsv_row_visit_const
typedef void (*bcsv_visit_callback_t)(size_t col_index, bcsv_type_t col_type,
                                       const void* value, void* user_data);
// ============================================================================
// CSV Reader API
// ============================================================================
bcsv_csv_reader_t       bcsv_csv_reader_create  (bcsv_layout_t layout, char delimiter, char decimal_sep);
void                    bcsv_csv_reader_destroy  (bcsv_csv_reader_t reader);
bool                    bcsv_csv_reader_open     (bcsv_csv_reader_t reader, const char* filename, bool has_header);
void                    bcsv_csv_reader_close    (bcsv_csv_reader_t reader);
bool                    bcsv_csv_reader_is_open  (const_bcsv_csv_reader_t reader);
const_bcsv_layout_t     bcsv_csv_reader_layout   (const_bcsv_csv_reader_t reader);
bool                    bcsv_csv_reader_next     (bcsv_csv_reader_t reader);       // read next CSV row
const_bcsv_row_t        bcsv_csv_reader_row      (const_bcsv_csv_reader_t reader); // current row
size_t                  bcsv_csv_reader_index    (const_bcsv_csv_reader_t reader);  // rows read so far
const char*             bcsv_csv_reader_error_msg(const_bcsv_csv_reader_t reader);  // per-handle error message
// ============================================================================
// CSV Writer API
// ============================================================================
bcsv_csv_writer_t       bcsv_csv_writer_create   (bcsv_layout_t layout, char delimiter, char decimal_sep);
void                    bcsv_csv_writer_destroy   (bcsv_csv_writer_t writer);
bool                    bcsv_csv_writer_open      (bcsv_csv_writer_t writer, const char* filename, bool overwrite, bool include_header);
void                    bcsv_csv_writer_close     (bcsv_csv_writer_t writer);
bool                    bcsv_csv_writer_is_open   (const_bcsv_csv_writer_t writer);
const_bcsv_layout_t     bcsv_csv_writer_layout    (const_bcsv_csv_writer_t writer);
bool                    bcsv_csv_writer_next      (bcsv_csv_writer_t writer);                    // writes internal row
bool                    bcsv_csv_writer_write     (bcsv_csv_writer_t writer, const_bcsv_row_t row); // writes external row
bcsv_row_t              bcsv_csv_writer_row       (bcsv_csv_writer_t writer);                    // mutable row handle
size_t                  bcsv_csv_writer_index     (const_bcsv_csv_writer_t writer);               // rows written so far
const char*             bcsv_csv_writer_error_msg (const_bcsv_csv_writer_t writer);               // per-handle error message
int8_t              bcsv_row_get_int8   (const_bcsv_row_t row, int col);
int16_t             bcsv_row_get_int16  (const_bcsv_row_t row, int col);
int32_t             bcsv_row_get_int32  (const_bcsv_row_t row, int col);
int64_t             bcsv_row_get_int64  (const_bcsv_row_t row, int col);
float               bcsv_row_get_float  (const_bcsv_row_t row, int col);         // strict: DOUBLE columns are an error, not narrowed
double              bcsv_row_get_double (const_bcsv_row_t row, int col);         // widens losslessly: bool/int8..int32/uint8..uint32/float/double; int64/uint64/string = error
const char*         bcsv_row_get_string (const_bcsv_row_t row, int col);         // valid until the cell changes
void                bcsv_row_set_bool   (bcsv_row_t row, int col, bool        value);
void                bcsv_row_set_uint8  (bcsv_row_t row, int col, uint8_t     value);
void                bcsv_row_set_uint16 (bcsv_row_t row, int col, uint16_t    value);
void                bcsv_row_set_uint32 (bcsv_row_t row, int col, uint32_t    value);
void                bcsv_row_set_uint64 (bcsv_row_t row, int col, uint64_t    value);
void                bcsv_row_set_int8   (bcsv_row_t row, int col, int8_t      value);
void                bcsv_row_set_int16  (bcsv_row_t row, int col, int16_t     value);
void                bcsv_row_set_int32  (bcsv_row_t row, int col, int32_t     value);
void                bcsv_row_set_int64  (bcsv_row_t row, int col, int64_t     value);
void                bcsv_row_set_float  (bcsv_row_t row, int col, float       value);
void                bcsv_row_set_double (bcsv_row_t row, int col, double      value);
void                bcsv_row_set_string (bcsv_row_t row, int col, const char* value);
// Vectorized access - bulk get/set multiple consecutive columns of the same type
// dst/src: pointer to array buffer
// start_col: starting column index (0-based)
// count: number of consecutive columns to read/write
void                bcsv_row_get_bool_array   (const_bcsv_row_t row, int start_col, bool*     dst, size_t count);
void                bcsv_row_get_uint8_array  (const_bcsv_row_t row, int start_col, uint8_t*  dst, size_t count);
void                bcsv_row_get_uint16_array (const_bcsv_row_t row, int start_col, uint16_t* dst, size_t count);
void                bcsv_row_get_uint32_array (const_bcsv_row_t row, int start_col, uint32_t* dst, size_t count);
void                bcsv_row_get_uint64_array (const_bcsv_row_t row, int start_col, uint64_t* dst, size_t count);
void                bcsv_row_get_int8_array   (const_bcsv_row_t row, int start_col, int8_t*   dst, size_t count);
void                bcsv_row_get_int16_array  (const_bcsv_row_t row, int start_col, int16_t*  dst, size_t count);
void                bcsv_row_get_int32_array  (const_bcsv_row_t row, int start_col, int32_t*  dst, size_t count);
void                bcsv_row_get_int64_array  (const_bcsv_row_t row, int start_col, int64_t*  dst, size_t count);
void                bcsv_row_get_float_array  (const_bcsv_row_t row, int start_col, float*    dst, size_t count);
void                bcsv_row_get_double_array (const_bcsv_row_t row, int start_col, double*   dst, size_t count);
void                bcsv_row_set_bool_array   (bcsv_row_t row, int start_col, const bool*     src, size_t count);
void                bcsv_row_set_uint8_array  (bcsv_row_t row, int start_col, const uint8_t*  src, size_t count);
void                bcsv_row_set_uint16_array (bcsv_row_t row, int start_col, const uint16_t* src, size_t count);
void                bcsv_row_set_uint32_array (bcsv_row_t row, int start_col, const uint32_t* src, size_t count);
void                bcsv_row_set_uint64_array (bcsv_row_t row, int start_col, const uint64_t* src, size_t count);
void                bcsv_row_set_int8_array   (bcsv_row_t row, int start_col, const int8_t*   src, size_t count);
void                bcsv_row_set_int16_array  (bcsv_row_t row, int start_col, const int16_t*  src, size_t count);
void                bcsv_row_set_int32_array  (bcsv_row_t row, int start_col, const int32_t*  src, size_t count);
void                bcsv_row_set_int64_array  (bcsv_row_t row, int start_col, const int64_t*  src, size_t count);
void                bcsv_row_set_float_array  (bcsv_row_t row, int start_col, const float*    src, size_t count);
void                bcsv_row_set_double_array (bcsv_row_t row, int start_col, const double*   src, size_t count);
// ============================================================================
// Row Visit API (read-only visitor pattern via callback)
// ============================================================================
// Visits each column in [start_col, start_col+count) calling cb once per column.
// For each column the callback receives: column index, column type, pointer to
// value (bool*, uint8_t*, ..., const char* for STRING), and user_data.
// Numeric pointers remain valid only for the duration of the callback invocation.
void                bcsv_row_visit_const(const_bcsv_row_t row, size_t start_col, size_t count,
                                          bcsv_visit_callback_t cb, void* user_data);
// ============================================================================
// Sampler API (expression-based filter + project over a Reader)
// ============================================================================
// Creates a sampler attached to an opened reader. The sampler does NOT take
// ownership of the reader — the caller must keep the reader open and destroy
// it after the sampler is destroyed.
bcsv_sampler_t      bcsv_sampler_create         (bcsv_reader_t reader);
void                bcsv_sampler_destroy        (bcsv_sampler_t sampler);
// Compile a conditional (filter) expression. Returns true on success.
// On failure, bcsv_sampler_error_msg() reports the compilation error.
bool                bcsv_sampler_set_conditional(bcsv_sampler_t sampler, const char* expr);
// Compile a selection (projection) expression. Returns true on success.
bool                bcsv_sampler_set_selection  (bcsv_sampler_t sampler, const char* expr);